# lowlang

./: .gitignore  Cargo.toml  docs.md  rustfmt.toml  test  test.ll  test.low  test.swift
analysis/: Cargo.toml
analysis/src/: copy.rs  generic.rs  lib.rs  lifetime.rs  stack_alloc.rs  thunk.rs  type_info.rs  witness.rs
assemble/: Cargo.toml
assemble/src/: lib.rs
backend-clif/: Cargo.toml
backend-clif/src/: instr.rs  intrinsic.rs  lib.rs  metadata.rs  middle.rs  middle2.rs  pass.rs  ptr.rs  runtime.rs  ty.rs  value.rs
backend-cranelift/: Cargo.toml
backend-cranelift/src/: lib.rs
backend-llvm/: Cargo.toml
backend-llvm/src/: lib.rs  metadata.rs  ty.rs
check/: Cargo.toml
check/src/: ctx.rs  lib.rs  typecheck.rs
codegen/: Cargo.toml
codegen/src/: abi.rs  analyze.rs  lib.rs  metadata.rs  obj_file.rs  pass.rs  place.rs  ptr.rs  runtime.rs  ty.rs  value.rs
codegen/src/abi/: pass.rs  ret.rs
codegen/src/trans/: cast.rs  mod.rs  operand.rs  place.rs  ratio.rs  stmt.rs  term.rs  value.rs
codegen_clif/: Cargo.toml
codegen_clif/src/: lib.rs  pass.rs  ptr.rs  value.rs
codegen_cranelift/: Cargo.toml
codegen_cranelift/src/: const_.rs  decl.rs  lib.rs  place.rs  ptr.rs  trans.rs  value.rs
codegen_llvm/: Cargo.toml
codegen_llvm/src/: lib.rs
diagnostics/: Cargo.toml
diagnostics/diagnostics-derive/: Cargo.toml
diagnostics/diagnostics-derive/src/: lib.rs
diagnostics/src/: code.rs  diagnostic.rs  file.rs  lib.rs  reporter.rs  span.rs
diagnostics/src/emit/: border.rs  file.rs  header.rs  mod.rs  note.rs  snippet.rs  source.rs  underline.rs
eval/: Cargo.toml
eval/src/: heap.rs  lib.rs  stack.rs  val.rs
intern/: Cargo.toml
intern/src/: lib.rs
ir/: Cargo.toml
ir/src/: builder.rs  db.rs  display.rs  graph.rs  intrinsics.rs  layout.rs  lexer.rs  lib.rs  parser.rs  printing.rs  transform.rs  ty.rs  visit.rs  visitor.rs
ll-cranelift/: Cargo.toml
ll-cranelift/src/: lib.rs
ll-llvm/: Cargo.toml
ll-llvm/src/: lib.rs
llc/: Cargo.toml
llc/src/: main.rs
lowc/: Cargo.toml
lowc/src/: main.rs
lowlang-check/: Cargo.toml
lowlang-check/src/: lib.rs
lowlang-cranelift/: Cargo.toml
lowlang-cranelift/src/: analyze.rs  error.rs  lib.rs  pass.rs  place.rs  value.rs
lowlang-cranelift/src/trans/: mod.rs  operand.rs  place.rs  ratio.rs  stmt.rs  term.rs  value.rs
lowlang-parser/: Cargo.toml
lowlang-parser/src/: buffer.rs  ident.rs  lexer.rs  literal.rs  punct.rs  token.rs
lowlang-syntax/: Cargo.toml
lowlang-syntax/src/: builder.rs  layout.rs  lib.rs  mono.rs  parsing.rs  post.rs  printing.rs  ty.rs  util.rs  visit.rs
lowlang-transform/: Cargo.toml
lowlang-transform/src/: blocks.rs  const_var.rs  inline.rs  lib.rs  merge.rs  switch.rs  vars.rs
middle/: Cargo.toml
middle/src/: fns.rs  lib.rs  type_info.rs  value_witness_table.rs
middle2/: Cargo.toml
middle2/src/: fns.rs  lib.rs
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  parse.rs
runtime/: Cargo.toml  build.sh  test  test.c
runtime/include/: gen_alloc.h  metadata.h  rc_alloc.h  runtime.h
runtime/src/: gen_alloc.c  lib.rs  metadata.c  rc_alloc.c  runtime.c  runtime.h
src/: backend.rs  lib.rs  main.rs  type_info.rs
syntax/: Cargo.toml
syntax/parser/: Cargo.toml
syntax/parser/src/: buffer.rs  error.rs  ident.rs  lexer.rs  lib.rs  literal.rs  parse.rs  punct.rs  token.rs
syntax/src/: builder.rs  layout.rs  lib.rs  mono.rs  parsing.rs  printing.rs  ty.rs  util.rs  visit.rs
test/: hello_world  hello_world.lowlang  main  main.ll  main.lowlang
transform/: Cargo.toml
transform/src/: lib.rs
umbrella/: Cargo.toml
umbrella/src/: lib.rs
vm/: Cargo.toml
vm/src/: lib.rs  memory.rs
