[package]
name = "lowlang"
version = "0.1.0"
authors = ["Cyberduc-k <cyberduck_@outlook.com>"]
edition = "2018"

[[bin]]
name = "lowlang"
path = "src/main.rs"

[dependencies]
intern = { git = "https://github.com/Cyberduc-k/fluix.git", branch = "redesign" }
diagnostics = { git = "https://github.com/Cyberduc-k/fluix.git", branch = "redesign" }
syntax = { path = "syntax" }
codegen = { path = "codegen" }
