[package]
name = "lowlang"
version = "0.1.0"
authors = ["Cyberduc-k <cyberduck_@outlook.com>"]
edition = "2018"

[[bin]]
name = "lowlang"
path = "src/main.rs"

[dependencies]
intern = { path = "../fluix/intern" }
diagnostics = { path = "../fluix/diagnostics" }
lowlang-syntax = { path = "lowlang-syntax" }
lowlang-check = { path = "lowlang-check" }
lowlang-cranelift = { path = "lowlang-cranelift" }
target-lexicon = "0.10.0"
