[package]
name = "assemble"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2018"

[features]
default = ["cranelift"]
cranelift = ["codegen_cranelift"]

[dependencies]
ir = { path = "../ir" }
codegen = { path = "../codegen" }
codegen_cranelift = { path = "../codegen_cranelift", optional = true }
