[package]
name = "backend-clif"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ir = { path = "../ir" }
arena = { git = "https://github.com/Xiulf/arena.git" }
cranelift = "0.74.0"
cranelift-module = "0.74.0"
cranelift-object = "0.74.0"
target-lexicon = "0.12.0"
tempfile = "3.2.0"
