[package]
name = "codegen"
version = "0.1.0"
authors = ["Cyberduc-k <cyberduck_@outlook.com>"]
edition = "2018"

[dependencies]
syntax = { path = "../syntax" }
cranelift-module = "0.56.0"
cranelift-frontend = "0.56.0"
cranelift-codegen = "0.56.0"
cranelift-object = "0.56.0"
target-lexicon = "0.10.0"
object = "0.17.0"
