[package]
name = "codegen_llvm"
version = "0.1.0"
authors = ["Cyberduc-k <tttymo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

[dependencies]
ir = { path = "../ir" }
index_vec = "0.1.2"
tempfile = "3.2.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
